--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="skill-row">
             <img class="skill-img" src="skills.png" alt="skills-img">
             <h3>My Interests</h3>
-            <p>My skills in technologies are web developmnet, Digital marketing, SEO and i can make beautiful web designs as well!</p>
+            <p>My skills in technologies are Java, Microservices, Web Dev, Digital marketing, SEO and i can make beautiful web designs as well!</p>
           </div>
         </div>
         <hr>
@@ -48,9 +48,9 @@
         </div>
       </div> 
       <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-        <a class="footer-link" href="https://twitter.com/">Twitter</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/tamim-ahmed-62993772/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/syedtamim1">Twitter</a>
+        <a class="footer-link" href="https://retisio.com/">Website</a>
         <p class="footer-text">© 2021 Tamim Ahmed.</p>
       </div>
       
