--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top">
         <img class="top-cloud"src="cloud.png" alt="cloud-img">
         <h1>I'm Tamim.</h1>
-        <h2>A Web developer and a <span>pro</span>grammer.</h2>
+        <h2>A Software Developer and a <span>Pro</span>grammer.</h2>
         <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
         <img src="mountain.png"  alt="mountain-img">
     </div>
@@ -23,7 +23,7 @@
         <div class="profile">
           <img class="profile-img" src="tamim.png" alt="tamim-img">
           <h2>Hello.</h2>
-          <p class="intro">I'm a web developer and An SEO analyst with keen interest in tehnology. i ❤️ to read and code!</p>
+          <p class="intro">I'm a Software developer and An SEO analyst with keen interest in tehnology. i ❤️ to read and code!</p>
         </div>
         <hr>
         <div class="skills">
